# image-converter

./: .editorconfig  .gitignore  README.md  pyproject.toml
config/: logging.yaml  settings.yaml
dev/scripts/db/: fill_db.py
dev/scripts/requests/: bad_token  get_request_image.ps1  get_request_log.ps1  post_request_image.ps1
dev/scripts/utils/: generate_big_file.ps1
image_converter/: logger.py  main.py  policy.py  settings.py
image_converter/backend/: models.py  routes.py
image_converter/backend/db/: context.py  settings.py
image_converter/backend/views/: __init__.py  decorators.py  helpers.py
image_converter/backend/views/image/: view.py
image_converter/backend/views/image/logic/: __init__.py
image_converter/backend/views/image/logic/get/: __init__.py  get.py  helpers.py
image_converter/backend/views/image/logic/post/: __init__.py  helpers.py  post.py
image_converter/backend/views/log/: view.py
image_converter/backend/views/log/logic/get/: get.py
image_converter/images/: converter.py
logs/: log
scripts/: clear_db.py  create_user.py  init_db.py
